fix text alignment on hamburger

--- a/styles/hamburger.css
+++ b/styles/hamburger.css
@@ -58,10 +58,10 @@
   flex-direction: column;
   align-items: left;
   z-index: 1;
-  top: -14px;
+  top: -16.5px;
   left: 115px;
   font-family: "Montserrat", sans-serif;
-  font-size: 2em;
+  font-size: 2.5em;
   pointer-events: none;
 }
 /* needed so they are stacked on top of each other */
